# xml_json

./: .editorconfig  .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  print_site_banner.tpl  pyproject.toml  sitemap.xml  vercel.json
.github/workflows/: github_pages.yml  test.yml  vercel_python.yml
common/: Makefile  mkdocs_base.yml
css/: custom.css
docs/: index.md
graph/: index.html
node/: index.html
overrides/: index.html  main.html
overrides/graph/: index.html
overrides/node/: index.html
overrides/sql/: index.html
overrides/syntax/: index.html
overrides/tutorial/: index.html
print_page/: index.html
search/: search_index.json
sql/: index.html
syntax/: index.html
tests/: test_node.py  test_parsers.py  test_query_builder.py  test_transferme_analyzer.py  test_xml_json.py  test_xml_parsers.py
tools/: __init__.py  reserved_words.csv
tutorial/: index.html
working/: onnnx.py
xml_json/: __init__.py  base.py  nodes_sql.py  parser.py  schema.py  transfermer_analyzer.py  types.py  xml.lark  xml_json.lark
xml_json/compilers/: __init__.py  abc.py  python.py
xml_json/compilers/sql/: common.py  postgresql.py
xml_json/parsers/: xml.py
