[tool.poetry]
name = "sqlsuper"
version = "0.0.2"
description = ""
authors = ["sasano8 <y-sasahara@ys-method.com>"]
license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md"]
# repository = "https://github.com/sasano8/asy"

[tool.poetry.dependencies]
python = ">=3.8,<=3.10.*"
lark = "^1.1.2"

[tool.poetry.group.test.dependencies]
pre-commit = "^2.12.0"
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-cov = "^3.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkautodoc = "^0.2.0"
mkdocs-material = "^8.5.8"
pymdown-extensions = "^9.7"
mkdocs-print-site-plugin = "^2.3.4"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
